--- a/i18n/contents+zh-CN.po
+++ b/i18n/contents+zh-CN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 16:21+0000\n"
+"PO-Revision-Date: 2018-11-06 19:42+0000\n"
 "Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: zh-CN\n"
@@ -187,8 +187,8 @@ msgid ""
 "Message to @get_tor with the words \"osx en\" in it (you don't need to "
 "follow the account)."
 msgstr ""
-"若要获取 OS X 平台之英文版 Tor 浏览器的下载超链接，只要将“osx en”这几个字写成"
-"消息并直接传讯发送给 @get_tor 帐号即可。（您不需要关注该帐号）"
+"若要获取 OS X 平台之英文版 Tor 浏览器的下载超链接，只要将“osx en”这几个字写成消息并直接传讯发送给 @get_tor "
+"帐号即可。（您不需要关注该帐号）。"
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -1179,11 +1179,10 @@ msgid ""
 "be served over two different Tor circuits, so the tracker will not know that "
 "both connections originate from your browser."
 msgstr ""
-" Tor 浏览器会以您在网址列中的网站名称为中心，来维护您与网站间的交互关系，因"
-"此，即使您连上了两个不同的网站，但两个站台上都有使用相同的第三方网络追踪服"
-"务，Tor 浏览器仍会强制让您与这两个网站间的连接，透过两条不同的洋葱路由回路来"
-"交换数据，如此可以让第三方网络追踪服务非常难以察觉这两条通往不同网站的连接，"
-"其实都是源自于您的浏览器。"
+"Tor "
+"浏览器会以您在网址列中的网站名称为中心，来维护您与网站间的交互关系，因此，即使您连上了两个不同的网站，但两个站台上都有使用相同的第三方网络追踪服务，"
+"Tor 浏览器仍会强制让您与这两个网站间的连接，透过两条不同的洋葱路由回路来交换数据，如此可以让第三方网络追踪服务非常难以察觉这两条通往不同网站的连接，其"
+"实都是源自于您的浏览器。"
 
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
@@ -1803,7 +1802,7 @@ msgstr "订阅我们每个月发布的消息和机遇"
 msgid ""
 "Trademark, copyright notices, and rules for use by third parties can be "
 "found in our "
-msgstr "商标保护，专利保护，以及第三方使用规则可以在这里找到："
+msgstr "商标保护，专利保护，以及第三方使用规则可以在这里找到 "
 
 #: templates/layout.html:7
 msgid "Tor Project | Tor Browser Manual"
