--- a/i18n/contents+es.po
+++ b/i18n/contents+es.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 18:41+0100\n"
-"Last-Translator: emmapeel <emma.peel@riseup.net>\n"
+"PO-Revision-Date: 2018-11-06 19:42+0000\n"
+"Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Weblate 3.2.2\n"
 "X-Poedit-Bookmarks: -1,211,-1,-1,-1,-1,-1,-1,-1,-1\n"
 
 #: http://localhost/security-slider/
@@ -102,7 +102,7 @@ msgid ""
 "Satori is an add-on for the Chrome or Chromium browsers that allows you to "
 "download several security and privacy programs from different sources."
 msgstr ""
-"Satori es un complemento para navegadores Chrome y Chromium que le permite "
+"Satori es un complemento para navegadores Chrome y Chromium que te permite "
 "descargar varios programas de seguridad y privacidad desde distintas fuentes."
 
 #: http://localhost/bridges/ (content/bridges/contents+en.lr:topic.body)
@@ -236,7 +236,7 @@ msgstr ""
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
 msgid "###### New Tor circuit for this site"
-msgstr "##### Nuevo circuito Tor para este sitio."
+msgstr "##### Nuevo circuito Tor para este sitio"
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.body)
@@ -246,7 +246,7 @@ msgstr "Estándar"
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.description)
 msgid "Becoming a translator for the Tor Project"
-msgstr "Conviértete en traductor del Proyecto Tor."
+msgstr "Conviértete en traductor del Proyecto Tor"
 
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
@@ -389,7 +389,7 @@ msgstr ""
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
 msgid "###### To use GetTor via email:"
-msgstr "##### Usar GetTor vía correo electrónico."
+msgstr "##### Usar GetTor vía correo electrónico:"
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid "</td>"
@@ -917,11 +917,11 @@ msgid ""
 "configure a pluggable transport."
 msgstr ""
 "La primera pantalla, pregunta si el acceso a la red Tor está bloqueado o "
-"censurado en tu conexión. Si no crees que este sea el caso, selecciona \"No"
-"\". Si sabes que tu conexión está censurada, o has intentado conectar a la "
-"red Tor y no han funcionado otras soluciones, selecciona \"Sí\",  que te "
-"llevará a la pantalla <a href=\"circumvention\">Evasión</link> para "
-"configurar un transporte conectable."
+"censurado en tu conexión. Si no crees que este sea el caso, selecciona \"No\""
+". Si sabes que tu conexión está censurada, o has intentado conectar a la red "
+"Tor y no han funcionado otras soluciones, selecciona \"Sí\",  que te llevará "
+"a la pantalla <a href=\"circumvention\">Evasión</a> para configurar un "
+"transporte conectable."
 
 #: http://localhost/updating/
 #: (content/updating/contents+en.lr:topic.description)
@@ -1075,7 +1075,7 @@ msgstr ""
 #: (content/managing-identities/contents+en.lr:topic.description)
 msgid "Learn how to control personally-identifying information in Tor Browser"
 msgstr ""
-"Aprende a controlar la información para identificarte en el Navegador Tor."
+"Aprende a controlar la información para identificarte en el Navegador Tor"
 
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
@@ -1189,7 +1189,7 @@ msgstr ""
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
 msgid "###### To use GetTor via Twitter:"
-msgstr "##### Usar GetTor vía Twitter."
+msgstr "##### Usar GetTor vía Twitter:"
 
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
@@ -1348,7 +1348,7 @@ msgstr ""
 #: http://localhost/uninstalling/
 #: (content/uninstalling/contents+en.lr:topic.body)
 msgid "3. Empty your Trash"
-msgstr "3. Vacía tu Papelera."
+msgstr "3. Vacía tu Papelera"
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid "##### Types of pluggable transport"
@@ -1718,7 +1718,7 @@ msgstr ""
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.body)
 msgid "* Click the blue 'Join Team' button on the far right:"
-msgstr "* Clic en el botón azul \"Unirse al Equipo\" en el lado derecho."
+msgstr "* Clic en el botón azul \"Unirse al Equipo\" en el lado derecho:"
 
 #: http://localhost/ (content/contents+en.lr:showcase.title)
 msgid "How can we help?"
@@ -1850,7 +1850,7 @@ msgid ""
 msgstr ""
 "También puedes asegurarte de poder acceder a otros servicios cebolla "
 "conectando al <a href=\"http://3g2upl4pq6kufc4m.onion\">servicio cebolla de "
-"DuckDuckGo</a>."
+"DuckDuckGo</a>"
 
 #: http://localhost/bridges/ (content/bridges/contents+en.lr:topic.body)
 msgid ""
@@ -1996,7 +1996,7 @@ msgid ""
 "may need to be temporarily disabled:"
 msgstr ""
 "* Los siguientes programas de cortafuegos (firewall) se sabe que interfieren "
-"con Tor, y puede que necesites deshabilitarlos temporalmente."
+"con Tor, y puede que necesites deshabilitarlos temporalmente:"
 
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.body)
@@ -2025,7 +2025,7 @@ msgstr "<img class=\"col-md-6\" src=\"/static/images/circuit_full.png\">"
 
 #: templates/footer.html:5
 msgid "Our mission:"
-msgstr "Nuestra misión"
+msgstr "Nuestra misión:"
 
 #: templates/footer.html:5
 msgid ""
@@ -2053,7 +2053,7 @@ msgid ""
 "found in our "
 msgstr ""
 "Se pueden encontrar, la marca registrada, las notas de derechos de autor, y "
-"las reglas de uso por terceras partes, en nuestra"
+"las reglas de uso por terceras partes, en nuestra "
 
 #: templates/layout.html:7
 msgid "Tor Project | Tor Browser Manual"
