--- a/i18n/contents+ga.po
+++ b/i18n/contents+ga.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 15:00+0100\n"
-"Last-Translator: emmapeel <emma.peel@riseup.net>\n"
+"PO-Revision-Date: 2018-11-06 19:42+0000\n"
+"Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: ga\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2;\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Weblate 3.2.2\n"
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.description)
@@ -1345,7 +1345,7 @@ msgstr ""
 #: http://localhost/uninstalling/
 #: (content/uninstalling/contents+en.lr:topic.body)
 msgid "3. Empty your Trash"
-msgstr "3. Folmhaigh an Bruscar."
+msgstr "3. Folmhaigh an Bruscar"
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid "##### Types of pluggable transport"
@@ -1518,8 +1518,7 @@ msgid ""
 msgstr ""
 "Cé cur dearadh Brabhsálaí Tor chun cabhrú leat d'aitheantas a choinneáil i "
 "bhfolach ar an nGréasán, uaireanta tá sé ciallmhar Tor a úsáid ar shuímh "
-"Ghréasáin a éilíonn ainm úsáideora, focal faire, nó faisnéis phearsanta "
-"eile. "
+"Ghréasáin a éilíonn ainm úsáideora, focal faire, nó faisnéis phearsanta eile."
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.body)
@@ -1716,7 +1715,7 @@ msgstr "Forlíontáin, breiseáin, agus JavaScript"
 msgid "Learn what Tor Browser can do to protect your privacy and anonymity"
 msgstr ""
 "Foghlaim conas is féidir Brabhsálaí Tor a úsáid chun do phríobháideachas "
-"agus d'aitheantas a chosaint ar líne."
+"agus d'aitheantas a chosaint ar líne"
 
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.body)
@@ -1824,7 +1823,7 @@ msgstr "* Ní féidir le Tor droichead a úsáid má tá seachfhreastalaí ann."
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
 msgid "###### To use GetTor via Jabber/XMPP (Jitsi, CoyIM, etc.):"
-msgstr "##### Le GetTor a úsáid trí Jabber/XMPP (Jitsi, CoyIM, srl.)."
+msgstr "##### Le GetTor a úsáid trí Jabber/XMPP (Jitsi, CoyIM, srl.):"
 
 #: http://localhost/known-issues/
 #: (content/known-issues/contents+en.lr:topic.body)
@@ -1854,8 +1853,8 @@ msgid ""
 "Service</a>"
 msgstr ""
 "Agus is féidir leat deimhniú go bhfuil tú in ann seirbhísí Onion eile a "
-"rochtain trí cheangal a bhunú le <a href=\"http://3g2upl4pq6kufc4m.onion"
-"\">Seirbhís Onion DuckDuckGo</a>."
+"rochtain trí cheangal a bhunú le <a href=\"http://3g2upl4pq6kufc4m.onion\">"
+"Seirbhís Onion DuckDuckGo</a>"
 
 #: http://localhost/bridges/ (content/bridges/contents+en.lr:topic.body)
 msgid ""
@@ -2054,7 +2053,7 @@ msgid ""
 "found in our "
 msgstr ""
 "Gheobhaidh tú eolas faoi thrádmharcanna, cúrsaí cóipchirt, agus rialacha a "
-"bhaineann le tríú páirtithe sa"
+"bhaineann le tríú páirtithe sa "
 
 #: templates/layout.html:7
 msgid "Tor Project | Tor Browser Manual"
