--- a/i18n/contents+ru.po
+++ b/i18n/contents+ru.po
@@ -3,16 +3,16 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 18:53+0100\n"
-"Last-Translator: emmapeel <emma.peel@riseup.net>\n"
+"PO-Revision-Date: 2018-11-06 19:42+0000\n"
+"Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 1.8.11\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
+"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 3.2.2\n"
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.description)
@@ -114,7 +114,7 @@ msgid ""
 msgstr ""
 "Другие подключаемые транспорты, такие как meek, используют разные методы "
 "против цензуры, которые не полагаются на мосты. Вам не нужно получать адреса "
-"моста, чтобы использовать эти транспорты"
+"моста, чтобы использовать эти транспорты."
 
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
@@ -1307,7 +1307,7 @@ msgstr ""
 #: http://localhost/uninstalling/
 #: (content/uninstalling/contents+en.lr:topic.body)
 msgid "3. Empty your Trash"
-msgstr "3. Очистите Корзину."
+msgstr "3. Очистите Корзину"
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid "##### Types of pluggable transport"
@@ -1700,7 +1700,7 @@ msgstr ""
 msgid "The Security Slider is located in Torbutton’s “Security Settings” menu."
 msgstr ""
 "Ползунок управления уровнем безопасности расположен в меню настройках "
-"безопасности и конфиденциальности Torbutton"
+"безопасности и конфиденциальности Torbutton."
 
 #: http://localhost/transports/ (content/transports/contents+en.lr:topic.body)
 msgid ""
@@ -1879,7 +1879,7 @@ msgstr "Обход"
 #: http://localhost/secure-connections/
 #: (content/secure-connections/contents+en.lr:topic.body)
 msgid "Username and password used for authentication."
-msgstr "Логин и пароль использованы для аутентификация"
+msgstr "Логин и пароль использованы для аутентификация."
 
 #: http://localhost/onion-services/
 #: (content/onion-services/contents+en.lr:topic.body)
@@ -1930,7 +1930,7 @@ msgid ""
 "may need to be temporarily disabled:"
 msgstr ""
 "* Известны случаи, когда нижеперечисленное программное обеспечение мешало "
-"работе Tor. Возможно, его придется временно отключить."
+"работе Tor. Возможно, его придется временно отключить:"
 
 #: http://localhost/becoming-tor-translator/
 #: (content/becoming-tor-translator/contents+en.lr:topic.body)
@@ -1983,7 +1983,7 @@ msgid ""
 "found in our "
 msgstr ""
 "Товарные знаки, уведомления об авторских правах и правила использования "
-"третьими лицами можно найти в нашем"
+"третьими лицами можно найти в нашем "
 
 #: templates/layout.html:7
 msgid "Tor Project | Tor Browser Manual"
