--- a/i18n/contents+tr.po
+++ b/i18n/contents+tr.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-06 14:16+CET\n"
-"PO-Revision-Date: 2018-11-06 19:01+0100\n"
-"Last-Translator: emmapeel <emma.peel@riseup.net>\n"
+"PO-Revision-Date: 2018-11-06 19:42+0000\n"
+"Last-Translator: emma peel <emmapeel@torproject.org>\n"
 "Language-Team: none\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Weblate 3.2.2\n"
 
 #: http://localhost/security-slider/
 #: (content/security-slider/contents+en.lr:topic.description)
@@ -110,7 +110,7 @@ msgid ""
 msgstr ""
 "Meek gibi diğer eklenebilir aktarımlar, köprülerden yararlanan farklı anti-"
 "sansür teknikleri kullanır. Bu aktarımları kullanmak için köprü adreslerinin "
-"eklenmesi gerekmez. "
+"eklenmesi gerekmez."
 
 #: http://localhost/downloading/
 #: (content/downloading/contents+en.lr:topic.body)
@@ -745,7 +745,7 @@ msgid ""
 msgstr ""
 "Tor Browser ve HTTPS şifrelemesinin bulunduğu ve bulunmadığı durumlarda sizi "
 "izleyebilecek kişi ya da kuruluşların hangi bilgilere erişebileceğini "
-"aşağıda görebilirsiniz"
+"aşağıda görebilirsiniz:"
 
 #: http://localhost/managing-identities/
 #: (content/managing-identities/contents+en.lr:topic.body)
@@ -1093,7 +1093,7 @@ msgid ""
 "helping the project!"
 msgstr ""
 "Üyeliğiniz onaylandıktan sonra çeviri işlemlerine başlayabilirsiniz. "
-"Başlamaya hazır olduğunuzda <link href=\"https://www.transifex.com/otf/"
+"Başlamaya hazır olduğunuzda <a href=\"https://www.transifex.com/otf/"
 "torproject/\">Tor Transifex sayfasına</a> geri dönün. Tor projesine destek "
 "olduğunuz için teşekkürler!"
 
@@ -1724,9 +1724,9 @@ msgid ""
 "connecting to <a href=\"http://3g2upl4pq6kufc4m.onion/\">DuckDuckGo's Onion "
 "Service</a>"
 msgstr ""
-"Ayrıca <a href=\"http://3g2upl4pq6kufc4m.onion/\">DuckDuckGo Onion Hizmeti</"
-"a>sayfasına bağlanarak diğer Onion hizmetlerine erişebildiğinizden emin "
-"olabilirsiniz."
+"Ayrıca <a href=\"http://3g2upl4pq6kufc4m.onion/\">DuckDuckGo Onion "
+"Hizmeti</a>sayfasına bağlanarak diğer Onion hizmetlerine erişebildiğinizden "
+"emin olabilirsiniz"
 
 #: http://localhost/bridges/ (content/bridges/contents+en.lr:topic.body)
 msgid ""
@@ -1898,7 +1898,7 @@ msgstr "Bültenimize Abone Olun"
 msgid "Get monthly updates and opportunities from the Tor Project"
 msgstr ""
 "Tor Projesi hakkında aylık güncelleme ve fırsatlar hakkında bilgi "
-"alabilirsiniz."
+"alabilirsiniz"
 
 #: templates/footer.html:32
 msgid ""
@@ -1906,7 +1906,7 @@ msgid ""
 "found in our "
 msgstr ""
 "Üçüncü partiler tarafından kullanım için patent, telif hakkı ve kurallar "
-"şurada bulunabilir:"
+"şurada bulunabilir "
 
 #: templates/layout.html:7
 msgid "Tor Project | Tor Browser Manual"
